--- a/package.json
+++ b/package.json
@@ -27,7 +27,12 @@
     "type": "git",
     "url": "https://github.com/hperchec/tailwindcss-multi-theme.git"
   },
-  "keywords": ["tailwind", "theme", "dark", "multi"],
+  "keywords": [
+    "tailwind",
+    "theme",
+    "dark",
+    "multi"
+  ],
   "author": "Estevan Maito <ejmaito@gmail.com>",
   "contributors": [
     "Hervé Perchec <herve.perchec@gmail.com>"
@@ -56,12 +61,12 @@
     "husky": "4.2.5",
     "jest": "26.0.1",
     "lodash": "4.17.19",
-    "postcss": "7.0.30",
-    "postcss-selector-parser": "6.0.2",
+    "postcss": "^8.5.3",
+    "postcss-selector-parser": "^6.1.2",
     "prettier": "2.0.5",
     "rimraf": "3.0.2",
     "semantic-release": "^17.0.8",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.10",
+    "tailwindcss": "^3.4.17",
     "webpack": "4.43.0",
     "webpack-cli": "3.3.11"
   },
