--- a/package.json
+++ b/package.json
@@ -12,13 +12,25 @@
     "access": "public"
   },
   "scripts": {
+    "docs:api": "node ./bin/cli docs generate:api",
+    "docs:readme": "node ./bin/cli docs generate:readme",
+    "docs:cli": "npm run docs:cli:private && npm run docs:cli:public",
+    "docs:cli:private": "node ./bin/cli docs generate:cli -c ./docs/cli/private/config.js",
+    "docs:cli:public": "node ./bin/cli docs generate:cli -c ./docs/cli/public/config.js",
+    "docs": "npm run docs:readme && npm run docs:cli && npm run docs:api && npm run lint:markdown:fix",
+    "lint": "node ./bin/cli lint",
+    "lint:fix": "npm run lint -- --fix",
+    "lint:markdown": "node ./bin/cli lint:markdown",
+    "lint:markdown:fix": "npm run lint:markdown -- --fix",
+    "release": "node ./bin/cli release",
+    "changelog": "node ./bin/cli changelog",
+    "git-hooks:reset": "node ./bin/cli git-hooks reset",
+    "git-hooks:sync": "node ./bin/cli git-hooks sync",
     "cz": "git-cz",
     "test": "jest",
     "codecov": "codecov",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
     "prebuild": "rimraf dist",
     "build": "webpack",
     "semantic-release": "semantic-release"
@@ -60,6 +72,7 @@
     "eslint-plugin-standard": "4.0.1",
     "husky": "4.2.5",
     "jest": "26.0.1",
+    "juisy": "^2.0.0-beta.14",
     "lodash": "4.17.19",
     "postcss": "^8.5.3",
     "postcss-selector-parser": "^6.1.2",
