--- a/package.json
+++ b/package.json
@@ -2,7 +2,14 @@
   "name": "@hperchec/tailwindcss-multi-theme",
   "version": "1.0.5",
   "description": "The easiest way to create themes with Tailwind CSS.",
-  "main": "dist/index.js",
+  "type": "module",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    }
+  },
   "files": [
     "dist",
     "prefers-dark.js",
@@ -12,6 +19,7 @@
     "access": "public"
   },
   "scripts": {
+    "build": "vite build",
     "docs:api": "node ./bin/cli docs generate:api",
     "docs:readme": "node ./bin/cli docs generate:readme",
     "docs:cli": "npm run docs:cli:private && npm run docs:cli:public",
@@ -31,8 +39,6 @@
     "codecov": "codecov",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "prebuild": "rimraf dist",
-    "build": "webpack",
     "semantic-release": "semantic-release"
   },
   "repository": {
@@ -58,6 +64,7 @@
     "@babel/cli": "7.8.4",
     "@babel/core": "7.9.6",
     "@babel/preset-env": "7.9.6",
+    "@rollup/plugin-typescript": "^12.1.2",
     "babel-loader": "8.1.0",
     "codecov": "3.7.1",
     "commitizen": "4.1.2",
@@ -80,8 +87,6 @@
     "rimraf": "3.0.2",
     "semantic-release": "^17.0.8",
     "tailwindcss": "^3.4.17",
-    "webpack": "4.43.0",
-    "webpack-cli": "3.3.11"
   },
   "config": {
     "commitizen": {
@@ -92,5 +97,9 @@
     "hooks": {
       "pre-commit": "npm run lint && npm run test:coverage"
     }
+    "typescript": "^5.7.2",
+    "vite": "^5.4.11",
+    "vite-plugin-dts": "^4.5.3",
+    "vitest": "^2.1.8"
   }
 }
