--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "@rollup/plugin-typescript": "^12.1.2",
     "babel-loader": "8.1.0",
     "codecov": "3.7.1",
-    "eslint": "7.0.0",
+    "eslint": "^9.17.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-config-standard": "14.1.1",
     "eslint-plugin-import": "2.20.2",
