--- a/examples/simple/package.json
+++ b/examples/simple/package.json
@@ -1,13 +1,11 @@
 {
   "name": "simple",
-  "version": "1.0.0",
   "scripts": {
-    "tailwind": "npx tailwind build tailwind.css -o style.css",
-    "build": "env NODE_ENV=production npx tailwind build tailwind.css -o style.css"
+    "build": "npx tailwind build tailwind.css -o style.css"
   },
   "devDependencies": {
-    "tailwindcss": "^1.4.6",
-    "tailwindcss-multi-theme": "^1.0.0"
+    "@hperchec/tailwindcss-multi-theme": "file:../..",
+    "tailwindcss": "^3.4.17"
   },
   "license": "MIT"
 }
