--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,30 @@
 node_modules
-coverage
+
+# Distribution files
 dist
+
+# local env files
+.env*
+!.env.example
+
+# Example built files
 examples/**/style.css
 examples/**/tailwind.output.css
+
+# Tests
+tests/unit/.coverage
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
