--- a/package.json
+++ b/package.json
@@ -34,12 +34,10 @@
     "changelog": "node ./bin/cli changelog",
     "git-hooks:reset": "node ./bin/cli git-hooks reset",
     "git-hooks:sync": "node ./bin/cli git-hooks sync",
-    "cz": "git-cz",
-    "test": "jest",
-    "codecov": "codecov",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "semantic-release": "semantic-release"
+    "test": "node ./bin/cli test run",
+    "test:watch": "node ./bin/cli test",
+    "test:ui": "node ./bin/cli test --ui --coverage.enabled=true",
+    "test:coverage": "node ./bin/cli test run --coverage.enabled=true"
   },
   "repository": {
     "type": "git",
@@ -70,30 +68,18 @@
   },
   "homepage": "https://github.com/hperchec/tailwindcss-multi-theme#readme",
   "devDependencies": {
-    "@babel/cli": "7.8.4",
-    "@babel/core": "7.9.6",
-    "@babel/preset-env": "7.9.6",
     "@rollup/plugin-typescript": "^12.1.2",
+    "@vitest/coverage-v8": "^3.1.2",
+    "@vitest/ui": "^3.1.2",
     "babel-loader": "8.1.0",
-    "codecov": "3.7.1",
     "eslint": "^9.17.0",
-    "eslint-config-prettier": "6.11.0",
-    "eslint-config-standard": "14.1.1",
-    "eslint-plugin-import": "2.20.2",
-    "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "3.1.3",
-    "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-standard": "4.0.1",
-    "jest": "26.0.1",
-    "juisy": "^2.0.0-beta.14",
+    "juisy": "^2.0.0-beta.17",
     "lodash": "4.17.19",
-    "prettier": "2.0.5",
-    "rimraf": "3.0.2",
-    "semantic-release": "^17.0.8",
+    "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2",
     "vite": "^5.4.11",
     "vite-plugin-dts": "^4.5.3",
-    "vitest": "^2.1.8"
+    "vitest": "^3.1.2"
   }
 }
