--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
   },
   "homepage": "https://github.com/hperchec/tailwindcss-multi-theme#readme",
   "devDependencies": {
+    "@release-it/conventional-changelog": "^9.0.4",
     "@rollup/plugin-typescript": "^12.1.2",
     "@vitest/coverage-v8": "^3.1.2",
     "@vitest/ui": "^3.1.2",
